# aoc16_cpp20

./: CMakeLists.txt  main.cpp
include/: cells.h  lib.h
src/: cells.cpp  lib.cpp
tests/: CMakeLists.txt  aoc.cpp  cell_loading.cpp  simple.cpp
